<resources>
    <string name="app_name">Order Simulator</string>
    <string name="title_activity_order_simulator">OrderSimulatorActivity</string>
    <string name="tab_server_list">Server Orders</string>
    <string name="tab_shelf_orders">Shelf Orders</string>
    <string name="config">Configuration</string>
    <string name="alert_dialog_start_simulator">Start Simulator</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="server_config">Server Config</string>
    <string name="dispatch_rate">Dispatch rate(times per seconds)</string>
    <string name="error_order_file_read">Error! IOException when read order file! msg %1$s</string>
    <string name="fmt_total_order_count">Total %1$d</string>
    <string name="header_name">Name</string>
    <string name="header_temperature">Temperature</string>
    <string name="header_shelf_lift">Shelf lift</string>
    <string name="header_decay_rate">Decay rate</string>
    <string name="tab_shelf_hot_list">Hot</string>
    <string name="tab_shelf_cold_list">Cold</string>
    <string name="tab_shelf_frozen_list">Frozen</string>
    <string name="tab_shelf_overflow_list">Overflow</string>
    <string name="fmt_order_count">Order count %1$d</string>
    <string name="header_value">value</string>
    <string name="tab_wasted_orders">wasted orders</string>
    <string name="tab_fullfilled_orders">Fullfill orders</string>
    <string name="shelf_config">Shelf Config</string>
    <string name="hot_shelf_capacity">Hot Shelf Capacity</string>
    <string name="cold_shelf_capacity">Cold shelf capacity</string>
    <string name="frozen_shelf_capacity">Frozen shelf capacity</string>
    <string name="overflow_shelf_capacity">Overflow shelf capacity</string>
    <string name="courier_min_delay">Courier min delay(seconds)</string>
    <string name="courier_max_delay">Courier max delay(seconds)</string>
    <string name="simulator_is_running">Simulator is running!</string>
</resources>