<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_config"
        style="@style/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_server_config"
        style="@style/list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_config"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_config" />

    <View
        android:id="@+id/divider"
        style="@style/list_item"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_server_config" />

    <TextView
        android:id="@+id/tv_dispatch_rate"
        style="@style/list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispatch_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Spinner
        android:id="@+id/spinner_dispatch_rate"
        style="@style/list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dispatch_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dispatch_rate" />

</androidx.constraintlayout.widget.ConstraintLayout>